# SmolClaw

./: .dockerignore  .env.example  .gitignore  Aesopic_Problem.md  CMakeLists.txt  Dockerfile  MCP_README.md  README.md  SYDE_SYMPOSIUM_APP_2026.ipynb  TEST_RESULTS.md  agent.py  cli.py  complete_scraping_demo.py  config.py  debug_latest_release.html  docker-compose.yml  fix_event_sourcing.py  gateway.py  health_check.sh  keyword_cache.json  main.py  mcp_config.json  mcp_server.py  navigate.py  navigation_memory.pkl  navigation_missions.json  pyproject.toml  requirements.txt  server.cpp  test_fda_headed.py  test_fda_simple_headed.py  vision_helper.py
.github/workflows/: install-matrix.yml
.venv312/: pyvenv.cfg
agentic_navigator/: __init__.py  cli.py  gateway.py  main.py  navigate.py
agentic_navigator/config/: BrowserConfig.py
agentic_navigator/interactions/: __init__.py
agentic_navigator/models/: __init__.py
api/: __init__.py  scans.py
auth/: __init__.py  login_agent.py  models.py  totp.py
browser/: __init__.py  bot_evasion.py  browser_wrapper.py  config.py
browser_subagents/: __init__.py
config/: output.json
core/: __init__.py
dead_code/: test_duckduckgo_search.py  test_fda_detailed.py  test_fda_run.py
debug_artifacts/: step_2_context.html
docs/: AGENTIC_NAVIGATOR_VS_SMOLCLAW.md  AGENT_STRUCTURE.md  BROWSER_SYSTEM.md  COGNITIVE_SYSTEM.md  COGNITIVE_SYSTEM_ANALYSIS.md  COMPLETE_ARCHITECTURE.md  CORRECTED_ARCHITECTURE.md  ENHANCEMENTS.md  FINAL_ARCHITECTURE.md  FINAL_STRUCTURE.md  IMPLEMENTATION_SUMMARY.md  MEMORY_SYSTEM_COMPLETE.md  MEMORY_SYSTEM_ROADMAP.md  MIGRATION_COMPLETE.md  OPTIMIZATION_RECOMMENDATIONS.md  PACKAGE_RELATIONSHIPS.md  SETUP_COMMAND.md  SETUP_COMPLETE.md  SMOLCLAW_STRUCTURE.md  SMOLEYES.md  SMOLEYES_COMPLETE.md  SMOLHAND_COMBINED.md  SYSTEM_ARCHITECTURE.md
infra/: __init__.py  credentials.py  database.py  storage.py
smolclaw/: __init__.py  agentic_runner.py  cli.py  cognitive_loop.py  config.py  config_defaults.py  gateway.py  loop.py  templates_loader.py  tool_calling.py  tui_client.py
smolclaw.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
smolhand/: __init__.py  runtime.py
tests/: README.md  comprehensive_astar_demo.py  comprehensive_astar_power_tools_demo.py  comprehensive_demo.py  debug_dom.py  demo_enhanced_capabilities.py  simple_dom_test.py  test_advanced_astar.py  test_astar_pathfinding.py  test_bs4_dom.py  test_cognitive_system.py  test_enhanced_astar_heuristics.py  test_env.py  test_fda_navigation_detailed.py  test_fda_navigation_headed.py  test_fda_navigation_simple.py  test_fda_navigation_simple_headed.py  test_mcp_dom.py  test_memory_phase1.py  test_memory_phase2.py  test_memory_phase3.py  test_web_search.py
tools/: registry.py
vision/: __init__.py  client.py  consensus.py  extractor.py  normalization.py
(+323 files in other folders)
