[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "smolclaw"
version = "0.1.0"
description = "SMOL claw CLI, gateway, and TUI"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
  "click>=8.1.0",
  "aiohttp>=3.9.0",
  "requests>=2.31.0",
  "python-dotenv>=1.0.0",
]

[project.scripts]
smolclaw = "smolclaw.cli:main"

[tool.setuptools]

[tool.setuptools.packages.find]
include = ["smolclaw*", "smolhand*", "agentic_navigator*"]

