[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "smolclaw"
version = "0.1.0"
description = "SMOL claw CLI, gateway, and TUI"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
  "click>=8.1.0",
  "aiohttp>=3.9.0",
  "requests>=2.31.0",
  "python-dotenv>=1.0.0",
  "huggingface_hub>=0.36.0",
  "smolagents>=1.24.0",
  "helium>=5.1.1",
  "selenium>=4.20.0",
]

[project.scripts]
smolclaw = "smolclaw.cli:main"

[tool.setuptools]

[tool.setuptools.packages.find]
include = ["smolclaw*", "smolhand*", "agentic_navigator*", "browser_subagents*"]

[tool.setuptools.package-data]
smolclaw = ["templates/**/*.md"]

